# newegg-scraper

./: Cargo.toml  README.md
src/: main.rs  newegg.html  scraper.rs
