[package]
name = "newegg_scraper"
version = "0.1.0"
authors = ["Nathan Moritz <nateim3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
select = "0.5.0"